force-app/main/default/objects/Child_beat__c/Child_beat__c.object-meta.xml
<CustomObject>
    <label>Beat</label>
    <nameField>
        <label>Beat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beats</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>