force-app/main/default/objects/Child_beat__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TSE</fullName>
            </value>
            <value>
                <fullName>DSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>