force-app/main/default/objects/Child_beat__c/fields/Beat_ID__c.field-meta.xml
<CustomField>
    <fullName>Beat_ID__c</fullName>
    <displayFormat>BEAT-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Beat ID Auto</label>
    <type>AutoNumber</type>
</CustomField>