force-app/main/default/objects/Child_beat__c/fields/Beat_Id_Text__c.field-meta.xml
<CustomField>
    <fullName>Beat_Id_Text__c</fullName>
    <externalId>true</externalId>
    <label>Beat ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>