force-app/main/default/objects/Child_beat__c/fields/Beat_Outlet_Count__c.field-meta.xml
<CustomField>
    <fullName>Beat_Outlet_Count__c</fullName>
    <formula>Total_Items__c 
+ IF(NOT(ISBLANK(Primary_Customer__c)), 1, 0) 
+ IF(NOT(ISBLANK(Sub_Stockist__c)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat Outlet Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>