force-app/main/default/objects/Child_beat__c/fields/Beat_Type__c.field-meta.xml
<CustomField>
    <fullName>Beat_Type__c</fullName>
    <label>Beat Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>