force-app/main/default/objects/Child_beat__c/fields/Calendar_beat__c.field-meta.xml
<CustomField>
    <fullName>Calendar_beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PJP</label>
    <referenceTo>Calendar_beat__c</referenceTo>
    <relationshipLabel>Beats</relationshipLabel>
    <relationshipName>Child_beats</relationshipName>
    <type>Lookup</type>
</CustomField>