force-app/main/default/objects/Child_beat__c/fields/Cloned_From_Employee_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From_Employee_Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloned From Employee Replacement</label>
    <type>Checkbox</type>
</CustomField>