force-app/main/default/objects/Child_beat__c/fields/Is_DSM_SSA__c.field-meta.xml
<CustomField>
    <fullName>Is_DSM_SSA__c</fullName>
    <formula>Owner:User.Is_SSA_DSM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_DSM/SSA</label>
    <type>Checkbox</type>
</CustomField>