force-app/main/default/objects/Child_beat__c/fields/No_Active_Outlets_for_15_days__c.field-meta.xml
<CustomField>
    <fullName>No_Active_Outlets_for_15_days__c</fullName>
    <formula>IF(AND(DATEVALUE(CreatedDate) &lt;= TODAY()-15, Active__c == true,   Total_Items__c == 0  ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Active Outlets for 15 days</label>
    <type>Checkbox</type>
</CustomField>