force-app/main/default/objects/Child_beat__c/fields/Old_Beat_Id_Back_End_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Old_Beat_Id_Back_End_Purpose__c</fullName>
    <label>Old Beat Id_Back_End_Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>