force-app/main/default/objects/Child_beat__c/fields/Owner_Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Owner_Employee_Code__c</fullName>
    <formula>Owner:User.Employee_Code__c</formula>
    <label>Executive Employee Code</label>
    <type>Text</type>
</CustomField>