force-app/main/default/objects/Child_beat__c/fields/Owner_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sales_Channel__c</fullName>
    <formula>IF(INCLUDES(Owner:User.Sales_Channel__c, &quot;TN&quot;), &quot;TN; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Owner:User.Sales_Channel__c, &quot;AP&quot;), &quot;AP; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Owner:User.Sales_Channel__c, &quot;TS&quot;), &quot;TS; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Owner:User.Sales_Channel__c, &quot;Cake&quot;), &quot;Cake; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Owner:User.Sales_Channel__c, &quot;Institutional&quot;), &quot;Institutional; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Owner:User.Sales_Channel__c, &quot;District Bulk&quot;), &quot;District Bulk; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Owner:User.Sales_Channel__c, &quot;Bread&quot;), &quot;Bread; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Owner:User.Sales_Channel__c, &quot;KA&quot;), &quot;KA; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Owner:User.Sales_Channel__c, &quot;Bulk Depot&quot;), &quot;Bulk Depot; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Owner:User.Sales_Channel__c, &quot;CPD&quot;), &quot;CPD; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Owner:User.Sales_Channel__c, &quot;Madurai&quot;), &quot;Madurai; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Owner:User.Sales_Channel__c, &quot;West&quot;), &quot;West; &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Sales Channel</label>
    <type>Text</type>
</CustomField>