force-app/main/default/objects/Child_beat__c/fields/Payroll_Employee__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Employee__c</fullName>
    <formula>if( NOT( ISBLANK(User__c) ), if( ISPICKVAL(User__r.Payroll__c, &apos;No&apos;), False, True), if( ISPICKVAL(Owner:User.Payroll__c, &apos;No&apos;), False, True) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll Employee?</label>
    <type>Checkbox</type>
</CustomField>