force-app/main/default/objects/Child_beat__c/fields/Primary_Customer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beats</relationshipLabel>
    <relationshipName>Beats</relationshipName>
    <type>Lookup</type>
</CustomField>