force-app/main/default/objects/Child_beat__c/fields/Primary_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Name__c</fullName>
    <formula>Primary_Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Customer Name</label>
    <type>Text</type>
</CustomField>