force-app/main/default/objects/Child_beat__c/fields/Primary_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Type__c</fullName>
    <formula>TEXT(Primary_Customer__r.Primary_Customer_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Customer Type</label>
    <type>Text</type>
</CustomField>