force-app/main/default/objects/Child_beat__c/fields/Sub_Stockiest_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stockiest_Name__c</fullName>
    <formula>Sub_Stockist__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Stockiest Name</label>
    <type>Text</type>
</CustomField>