force-app/main/default/objects/Child_beat__c/fields/Sub_Stockist__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stockist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Stockist</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beats (Sub Stockist)</relationshipLabel>
    <relationshipName>Beats1</relationshipName>
    <type>Lookup</type>
</CustomField>