force-app/main/default/objects/Child_beat__c/fields/Sub_Stockist_Outlet_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stockist_Outlet_Code__c</fullName>
    <formula>Sub_Stockist__r.Outlet_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Stockist Outlet Code</label>
    <type>Text</type>
</CustomField>