force-app/main/default/objects/Child_beat__c/fields/Total_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Items__c</fullName>
    <label>Total Active Outlets</label>
    <summaryFilterItems>
        <field>Junction_Beat__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Junction_Beat__c.Child_beat__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>