force-app/main/default/objects/Child_beat__c/listViews/Inactive_Beats.listView-meta.xml
<ListView>
    <fullName>Inactive_Beats</fullName>
    <columns>NAME</columns>
    <columns>Beat_Id_Text__c</columns>
    <columns>Beat_Type__c</columns>
    <columns>Primary_Customer__c</columns>
    <columns>Sub_Stockist__c</columns>
    <columns>Total_Items__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Beats</label>
</ListView>