force-app/main/default/objects/Child_beat__c/listViews/Todays.listView-meta.xml
<ListView>
    <fullName>Todays</fullName>
    <columns>NAME</columns>
    <columns>Beat_ID__c</columns>
    <columns>Primary_Customer__c</columns>
    <columns>Sub_Stockist__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays</label>
</ListView>